--- a/react/package.json
+++ b/react/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lottie-web": "^5.13.0",
     "react": "^18.3.1",
