--- a/react/package.json
+++ b/react/package.json
@@ -23,11 +23,15 @@
     "@mui/material": "^7.1.1",
     "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.7",
+    "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lottie-web": "^5.13.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-currency-input-field": "^3.10.0",
     "react-dom": "^18.3.1",
+    "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.26.2",
     "react-type-animation": "^3.2.0"
   },
