css campaign details

--- a/react/package.json
+++ b/react/package.json
@@ -29,6 +29,7 @@
     "lottie-web": "^5.13.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
+    "react-circular-progressbar": "^2.2.0",
     "react-currency-input-field": "^3.10.0",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
