--- a/react/package.json
+++ b/react/package.json
@@ -33,6 +33,7 @@
     "react-currency-input-field": "^3.10.0",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.26.2",
     "react-type-animation": "^3.2.0"
   },
