--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.0",
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
